# simCodeEditor

./: .gitmodules  CMakeLists.txt  QtUtils.cpp  QtUtils.h  SIM.cpp  SIM.h  UI.cpp  UI.h  api_index.py  callbacks.xml  codeEditor.h  common.cpp  common.h  config.pri  debug.h  dialog.cpp  dialog.h  editor.cpp  editor.h  license.txt  plugin.cpp  plugin.h  scintillaDlg.cpp  scintillaDlg.h  searchandreplacepanel.cpp  searchandreplacepanel.h  simCodeEditor.lua  simExtCodeEditor.pro  snippets.cpp  snippets.h  statusbar.cpp  toolbar.cpp  toolbar.h  v_repExtCodeEditor.cpp  v_repExtCodeEditor.h  v_repExtCodeEditor.pro
icons/: icons.cpp  makeicons.sh
icons/512/: icons.cpp
icons/64/: icons.cpp
snippets/child_script/: generalInfo.lua
snippets/lua/: external_file.lua  iterate_array.lua  iterate_table.lua
snippets/lua/child_script/: __index__.lua  generalInfo.lua  sysCall_actuation.lua  sysCall_afterCreate.lua  sysCall_afterDelete.lua  sysCall_joint.lua  sysCall_jointCallback.lua  sysCall_trigger.lua  sysCall_vision.lua
snippets/lua/coroutines/: __index__.lua  create_coroutine.lua  resume_coroutine.lua
snippets/lua/customization_script/: __index__.lua  generalInfo.lua  sysCall_actuation.lua  sysCall_beforeMainScript.lua  sysCall_dyn.lua  sysCall_jointCallback.lua  sysCall_userConfig.lua  sysCall_vision.lua
snippets/lua/simulation_script/: __index__.lua  customJointController-simple.lua  customJointController.lua  generalInfo.lua  sysCall_afterCopy.lua  sysCall_beforeCopy.lua  sysCall_beforeDelete.lua  sysCall_contact.lua  sysCall_init.lua
snippets/python/: external_file.py
snippets/python/child_script/: __index__.py  generalInfo.py
snippets/python/customization_script/: generalInfo.py
sourceCode/: SIM.cpp  SIM.h  UI.cpp  UI.h  common.cpp  common.h  dialog.cpp  dialog.h  editor.cpp  plugin.cpp  searchandreplacepanel.cpp  snippets.cpp  snippets.h  statusbar.h  toolbar.cpp  toolbar.h
tinyxml2/: license.txt
